@@ -21,12 +21,10 @@ import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.message.WriteShareGroupStateRequestData;
 import org.apache.kafka.common.message.WriteShareGroupStateResponseData;
 import org.apache.kafka.common.protocol.ApiKeys;
-import org.apache.kafka.common.protocol.ByteBufferAccessor;
 import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.common.protocol.Readable;
 
-import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -48,9 +46,9 @@ public class WriteShareGroupStateResponse extends AbstractResponse {
     public Map<Errors, Integer> errorCounts() {
         Map<Errors, Integer> counts = new HashMap<>();
         data.results().forEach(
-                result -> result.partitions().forEach(
-                        partitionResult -> updateErrorCounts(counts, Errors.forCode(partitionResult.errorCode()))
-                )
+            result -> result.partitions().forEach(
+                partitionResult -> updateErrorCounts(counts, Errors.forCode(partitionResult.errorCode()))
+            )
         );
         return counts;
     }
@@ -65,49 +63,49 @@ public class WriteShareGroupStateResponse extends AbstractResponse {
         // No op
     }
 
-    public static WriteShareGroupStateResponse parse(ByteBuffer buffer, short version) {
+    public static WriteShareGroupStateResponse parse(Readable readable, short version) {
         return new WriteShareGroupStateResponse(
-                new WriteShareGroupStateResponseData(new ByteBufferAccessor(buffer), version)
+            new WriteShareGroupStateResponseData(readable, version)
         );
     }
 
     public static WriteShareGroupStateResponseData toResponseData(Uuid topicId, int partitionId) {
         return new WriteShareGroupStateResponseData()
-                .setResults(Collections.singletonList(
-                        new WriteShareGroupStateResponseData.WriteStateResult()
-                                .setTopicId(topicId)
-                                .setPartitions(Collections.singletonList(
-                                        new WriteShareGroupStateResponseData.PartitionResult()
-                                                .setPartition(partitionId)))));
+            .setResults(List.of(
+                new WriteShareGroupStateResponseData.WriteStateResult()
+                    .setTopicId(topicId)
+                    .setPartitions(List.of(
+                        new WriteShareGroupStateResponseData.PartitionResult()
+                            .setPartition(partitionId)))));
     }
 
     public static WriteShareGroupStateResponseData toErrorResponseData(Uuid topicId, int partitionId, Errors error, String errorMessage) {
         WriteShareGroupStateResponseData responseData = new WriteShareGroupStateResponseData();
-        responseData.setResults(Collections.singletonList(new WriteShareGroupStateResponseData.WriteStateResult()
-                .setTopicId(topicId)
-                .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
-                        .setPartition(partitionId)
-                        .setErrorCode(error.code())
-                        .setErrorMessage(errorMessage)))));
+        responseData.setResults(List.of(new WriteShareGroupStateResponseData.WriteStateResult()
+            .setTopicId(topicId)
+            .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
+                .setPartition(partitionId)
+                .setErrorCode(error.code())
+                .setErrorMessage(errorMessage)))));
         return responseData;
     }
 
     public static WriteShareGroupStateResponseData.PartitionResult toErrorResponsePartitionResult(int partitionId, Errors error, String errorMessage) {
         return new WriteShareGroupStateResponseData.PartitionResult()
-                .setPartition(partitionId)
-                .setErrorCode(error.code())
-                .setErrorMessage(errorMessage);
+            .setPartition(partitionId)
+            .setErrorCode(error.code())
+            .setErrorMessage(errorMessage);
     }
 
     public static WriteShareGroupStateResponseData.WriteStateResult toResponseWriteStateResult(Uuid topicId, List<WriteShareGroupStateResponseData.PartitionResult> partitionResults) {
         return new WriteShareGroupStateResponseData.WriteStateResult()
-                .setTopicId(topicId)
-                .setPartitions(partitionResults);
+            .setTopicId(topicId)
+            .setPartitions(partitionResults);
     }
 
     public static WriteShareGroupStateResponseData.PartitionResult toResponsePartitionResult(int partitionId) {
         return new WriteShareGroupStateResponseData.PartitionResult()
-                .setPartition(partitionId);
+            .setPartition(partitionId);
     }
 
     public static WriteShareGroupStateResponseData toGlobalErrorResponse(WriteShareGroupStateRequestData request, Errors error) {
