@@ -21,16 +21,14 @@ import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.feature.SupportedVersionRange;
 import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.server.common.Feature;
+import org.apache.kafka.server.common.KRaftVersion;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.net.InetSocketAddress;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -48,7 +46,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 public final class VoterSetTest {
     @Test
     void testEmptyVoterSet() {
-        assertEquals(VoterSet.empty(), VoterSet.fromMap(Collections.emptyMap()));
+        assertEquals(VoterSet.empty(), VoterSet.fromMap(Map.of()));
     }
 
     @Test
@@ -85,7 +83,7 @@ public final class VoterSetTest {
     @Test
     void testVoterIds() {
         VoterSet voterSet = VoterSet.fromMap(voterMap(IntStream.of(1, 2, 3), true));
-        assertEquals(new HashSet<>(Arrays.asList(1, 2, 3)), voterSet.voterIds());
+        assertEquals(Set.of(1, 2, 3), voterSet.voterIds());
     }
 
     @Test
@@ -129,7 +127,7 @@ public final class VoterSetTest {
         VoterSet.VoterNode newVoter3 = VoterSet.VoterNode.of(
             voter3.voterKey(),
             Endpoints.fromInetSocketAddresses(
-                Collections.singletonMap(
+                Map.of(
                     ListenerName.normalised("ABC"),
                     InetSocketAddress.createUnresolved("abc", 1234)
                 )
@@ -145,6 +143,34 @@ public final class VoterSetTest {
         );
     }
 
+    @Test
+    void testUpdateVoterIgnoringDirectoryId() {
+        Map<Integer, VoterSet.VoterNode> aVoterMap = voterMap(IntStream.of(1, 2, 3), false);
+        VoterSet voterSet = VoterSet.fromMap(new HashMap<>(aVoterMap));
+
+        // Cannot override node id not contianed in the voter set
+        assertEquals(Optional.empty(), voterSet.updateVoterIgnoringDirectoryId(voterNode(4, true)));
+
+        // Test that it can override voter set with different directory ids
+        VoterSet.VoterNode newVoter3 = voterNode(3, true);
+        assertNotEquals(aVoterMap.get(3).voterKey(), newVoter3.voterKey());
+        aVoterMap.put(3, newVoter3);
+
+        assertEquals(
+            Optional.of(VoterSet.fromMap(new HashMap<>(aVoterMap))),
+            voterSet.updateVoterIgnoringDirectoryId(newVoter3)
+        );
+
+        // Test that it can continue to override voter set with different directory ids
+        newVoter3 = voterNode(3, true);
+        assertNotEquals(aVoterMap.get(3).voterKey(), newVoter3.voterKey());
+        aVoterMap.put(3, newVoter3);
+
+        assertEquals(
+            Optional.of(VoterSet.fromMap(new HashMap<>(aVoterMap))),
+            voterSet.updateVoterIgnoringDirectoryId(newVoter3)
+        );
+    }
 
     @Test
     void testCannotRemoveToEmptyVoterSet() {
@@ -282,7 +308,7 @@ public final class VoterSetTest {
     }
 
     @Test
-    void testNonoverlappingMajority() {
+    void testNonOverlappingMajority() {
         Map<Integer, VoterSet.VoterNode> startingVoterMap = voterMap(IntStream.of(1, 2, 3, 4, 5), true);
         VoterSet startingVoterSet = voterSet(startingVoterMap);
 
@@ -313,6 +339,17 @@ public final class VoterSetTest {
             .addVoter(voterNode(2, true))
             .get();
         assertMajorities(false, startingVoterSet, replacedVoterSet);
+    }
+
+    @Test
+    void testSupportsVersion() {
+        VoterSet voterSet = voterSet(voterMap(IntStream.of(1, 2, 3), false));
+        assertTrue(voterSet.supportsVersion(KRaftVersion.KRAFT_VERSION_0));
+        assertFalse(voterSet.supportsVersion(KRaftVersion.KRAFT_VERSION_1));
+
+        voterSet = voterSet(voterMap(IntStream.of(1, 2, 3), true));
+        assertTrue(voterSet.supportsVersion(KRaftVersion.KRAFT_VERSION_0));
+        assertTrue(voterSet.supportsVersion(KRaftVersion.KRAFT_VERSION_1));
     }
 
     private void assertMajorities(boolean overlap, VoterSet a, VoterSet b) {
@@ -362,7 +399,7 @@ public final class VoterSetTest {
         return voterNode(
             replicaKey,
             Endpoints.fromInetSocketAddresses(
-                Collections.singletonMap(
+                Map.of(
                     DEFAULT_LISTENER_NAME,
                     InetSocketAddress.createUnresolved(
                         "localhost",
@@ -374,11 +411,11 @@ public final class VoterSetTest {
     }
 
     public static VoterSet.VoterNode voterNode(ReplicaKey replicaKey, Endpoints endpoints) {
-        return new VoterSet.VoterNode(
-            replicaKey,
-            endpoints,
-            Feature.KRAFT_VERSION.supportedVersionRange()
-        );
+        var supportedVersionRange = replicaKey.directoryId().isEmpty() ?
+            new SupportedVersionRange((short) 0) :
+            Feature.KRAFT_VERSION.supportedVersionRange();
+
+        return new VoterSet.VoterNode(replicaKey, endpoints, supportedVersionRange);
     }
 
     public static VoterSet voterSet(Map<Integer, VoterSet.VoterNode> voters) {
