@@ -24,7 +24,6 @@ import com.yammer.metrics.core.Meter;
 import com.yammer.metrics.core.MetricName;
 import com.yammer.metrics.core.Timer;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -35,10 +34,6 @@ import java.util.stream.Collectors;
 public class KafkaMetricsGroup {
     private final String pkg;
     private final String simpleName;
-
-    public KafkaMetricsGroup(Class<?> klass) {
-        this(klass.getPackage() == null ? "" : klass.getPackage().getName(), klass.getSimpleName().replaceAll("\\$$", ""));
-    }
 
     /**
      * This constructor allows caller to build metrics name with custom package and class name. This is useful to keep metrics
@@ -85,7 +80,7 @@ public class KafkaMetricsGroup {
     }
 
     public <T> Gauge<T> newGauge(String name, Supplier<T> metric) {
-        return newGauge(name, metric, Collections.emptyMap());
+        return newGauge(name, metric, Map.of());
     }
 
     public <T> Gauge<T> newGauge(MetricName name, Supplier<T> metric) {
@@ -104,7 +99,7 @@ public class KafkaMetricsGroup {
 
     public final Meter newMeter(String name, String eventType,
                                 TimeUnit timeUnit) {
-        return newMeter(name, eventType, timeUnit, Collections.emptyMap());
+        return newMeter(name, eventType, timeUnit, Map.of());
     }
 
     public final Meter newMeter(MetricName metricName, String eventType, TimeUnit timeUnit) {
@@ -116,7 +111,7 @@ public class KafkaMetricsGroup {
     }
 
     public final Histogram newHistogram(String name) {
-        return newHistogram(name, true, Collections.emptyMap());
+        return newHistogram(name, true, Map.of());
     }
 
     public final Timer newTimer(String name, TimeUnit durationUnit, TimeUnit rateUnit, Map<String, String> tags) {
@@ -124,7 +119,7 @@ public class KafkaMetricsGroup {
     }
 
     public final Timer newTimer(String name, TimeUnit durationUnit, TimeUnit rateUnit) {
-        return newTimer(name, durationUnit, rateUnit, Collections.emptyMap());
+        return newTimer(name, durationUnit, rateUnit, Map.of());
     }
 
     public final Timer newTimer(MetricName metricName, TimeUnit durationUnit, TimeUnit rateUnit) {
@@ -136,7 +131,7 @@ public class KafkaMetricsGroup {
     }
 
     public final void removeMetric(String name) {
-        removeMetric(name, Collections.emptyMap());
+        removeMetric(name, Map.of());
     }
 
     public final void removeMetric(MetricName metricName) {
@@ -146,7 +141,7 @@ public class KafkaMetricsGroup {
     private static Optional<String> toMBeanName(Map<String, String> tags) {
         List<Map.Entry<String, String>> filteredTags = tags.entrySet().stream()
                 .filter(entry -> !entry.getValue().isEmpty())
-                .collect(Collectors.toList());
+                .toList();
         if (!filteredTags.isEmpty()) {
             String tagsString = filteredTags.stream()
                     .map(entry -> entry.getKey() + "=" + Sanitizer.jmxSanitize(entry.getValue()))
@@ -160,7 +155,7 @@ public class KafkaMetricsGroup {
     private static Optional<String> toScope(Map<String, String> tags) {
         List<Map.Entry<String, String>> filteredTags = tags.entrySet().stream()
                 .filter(entry -> !entry.getValue().isEmpty())
-                .collect(Collectors.toList());
+                .toList();
         if (!filteredTags.isEmpty()) {
             // convert dot to _ since reporters like Graphite typically use dot to represent hierarchy
             String tagsString = filteredTags.stream()
