@@ -17,91 +17,85 @@
 package org.apache.kafka.network;
 
 import org.apache.kafka.common.Endpoint;
+import org.apache.kafka.common.KafkaException;
 import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.common.security.auth.SecurityProtocol;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class SocketServerConfigsTest {
     @Test
     public void testDefaultNameToSecurityProto() {
-        Map<ListenerName, SecurityProtocol> expected = new HashMap<>();
-        expected.put(new ListenerName("PLAINTEXT"), SecurityProtocol.PLAINTEXT);
-        expected.put(new ListenerName("SSL"), SecurityProtocol.SSL);
-        expected.put(new ListenerName("SASL_PLAINTEXT"), SecurityProtocol.SASL_PLAINTEXT);
-        expected.put(new ListenerName("SASL_SSL"), SecurityProtocol.SASL_SSL);
-        assertEquals(expected, SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO);
+        assertEquals(Map.of(
+            new ListenerName("PLAINTEXT"), SecurityProtocol.PLAINTEXT,
+            new ListenerName("SSL"), SecurityProtocol.SSL,
+            new ListenerName("SASL_PLAINTEXT"), SecurityProtocol.SASL_PLAINTEXT,
+            new ListenerName("SASL_SSL"), SecurityProtocol.SASL_SSL
+        ), SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO);
     }
 
     @Test
     public void testListenerListToEndPointsWithEmptyString() {
-        assertEquals(Arrays.asList(),
-            SocketServerConfigs.listenerListToEndPoints("",
+        assertEquals(List.of(),
+            SocketServerConfigs.listenerListToEndPoints(List.of(),
                 SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO));
     }
 
     @Test
     public void testListenerListToEndPointsWithBlankString() {
-        assertEquals(Arrays.asList(),
-            SocketServerConfigs.listenerListToEndPoints(" ",
-                SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO));
+        KafkaException exception = assertThrows(KafkaException.class, () ->
+                SocketServerConfigs.listenerListToEndPoints(List.of(" "), SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO));
+        assertEquals("Unable to parse   to a broker endpoint", exception.getMessage());
     }
 
     @Test
     public void testListenerListToEndPointsWithOneEndpoint() {
-        assertEquals(Arrays.asList(
-            new Endpoint("PLAINTEXT", SecurityProtocol.PLAINTEXT, "example.com", 8080)),
-                SocketServerConfigs.listenerListToEndPoints("PLAINTEXT://example.com:8080",
+        assertEquals(List.of(new Endpoint("PLAINTEXT", SecurityProtocol.PLAINTEXT, "example.com", 8080)),
+                SocketServerConfigs.listenerListToEndPoints(List.of("PLAINTEXT://example.com:8080"),
                     SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO));
     }
 
     // Regression test for KAFKA-3719
     @Test
     public void testListenerListToEndPointsWithUnderscores() {
-        assertEquals(Arrays.asList(
+        assertEquals(List.of(
             new Endpoint("PLAINTEXT", SecurityProtocol.PLAINTEXT, "example.com", 8080),
             new Endpoint("SSL", SecurityProtocol.SSL, "local_host", 8081)),
-                SocketServerConfigs.listenerListToEndPoints("PLAINTEXT://example.com:8080,SSL://local_host:8081",
+                SocketServerConfigs.listenerListToEndPoints(List.of("PLAINTEXT://example.com:8080", "SSL://local_host:8081"),
                     SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO));
     }
 
     @Test
     public void testListenerListToEndPointsWithWildcard() {
-        assertEquals(Arrays.asList(
-            new Endpoint("PLAINTEXT", SecurityProtocol.PLAINTEXT, null, 8080)),
-                SocketServerConfigs.listenerListToEndPoints("PLAINTEXT://:8080",
+        assertEquals(List.of(new Endpoint("PLAINTEXT", SecurityProtocol.PLAINTEXT, null, 8080)),
+                SocketServerConfigs.listenerListToEndPoints(List.of("PLAINTEXT://:8080"),
                     SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO));
     }
 
     @Test
     public void testListenerListToEndPointsWithIpV6() {
-        assertEquals(Arrays.asList(
-            new Endpoint("PLAINTEXT", SecurityProtocol.PLAINTEXT, "::1", 9092)),
-                SocketServerConfigs.listenerListToEndPoints("PLAINTEXT://[::1]:9092",
+        assertEquals(List.of(new Endpoint("PLAINTEXT", SecurityProtocol.PLAINTEXT, "::1", 9092)),
+                SocketServerConfigs.listenerListToEndPoints(List.of("PLAINTEXT://[::1]:9092"),
                     SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO));
     }
 
     @Test
     public void testAnotherListenerListToEndPointsWithIpV6() {
-        assertEquals(Arrays.asList(
-            new Endpoint("SASL_SSL", SecurityProtocol.SASL_SSL, "fe80::b1da:69ca:57f7:63d8%3", 9092)),
-                SocketServerConfigs.listenerListToEndPoints("SASL_SSL://[fe80::b1da:69ca:57f7:63d8%3]:9092",
+        assertEquals(List.of(new Endpoint("SASL_SSL", SecurityProtocol.SASL_SSL, "fe80::b1da:69ca:57f7:63d8%3", 9092)),
+                SocketServerConfigs.listenerListToEndPoints(List.of("SASL_SSL://[fe80::b1da:69ca:57f7:63d8%3]:9092"),
                     SocketServerConfigs.DEFAULT_NAME_TO_SECURITY_PROTO));
     }
 
     @Test
     public void testAnotherListenerListToEndPointsWithNonDefaultProtoMap() {
-        Map<ListenerName, SecurityProtocol> map = new HashMap<>();
-        map.put(new ListenerName("CONTROLLER"), SecurityProtocol.PLAINTEXT);
-        assertEquals(Arrays.asList(
-            new Endpoint("CONTROLLER", SecurityProtocol.PLAINTEXT, "example.com", 9093)),
-                SocketServerConfigs.listenerListToEndPoints("CONTROLLER://example.com:9093",
-                    map));
+        assertEquals(List.of(new Endpoint("CONTROLLER", SecurityProtocol.PLAINTEXT, "example.com", 9093)),
+                SocketServerConfigs.listenerListToEndPoints(List.of("CONTROLLER://example.com:9093"),
+                    Map.of(new ListenerName("CONTROLLER"), SecurityProtocol.PLAINTEXT)));
     }
 }
