@@ -36,40 +36,45 @@ import org.apache.kafka.common.requests.ReadShareGroupStateResponse;
 import org.apache.kafka.common.requests.ReadShareGroupStateSummaryResponse;
 import org.apache.kafka.common.requests.WriteShareGroupStateResponse;
 import org.apache.kafka.common.utils.LogContext;
+import org.apache.kafka.common.utils.MockTime;
+import org.apache.kafka.common.utils.Time;
+import org.apache.kafka.coordinator.common.runtime.CoordinatorMetadataImage;
 import org.apache.kafka.coordinator.common.runtime.CoordinatorMetrics;
 import org.apache.kafka.coordinator.common.runtime.CoordinatorMetricsShard;
 import org.apache.kafka.coordinator.common.runtime.CoordinatorRecord;
 import org.apache.kafka.coordinator.common.runtime.CoordinatorResult;
+import org.apache.kafka.coordinator.common.runtime.KRaftCoordinatorMetadataImage;
 import org.apache.kafka.coordinator.share.generated.ShareSnapshotKey;
 import org.apache.kafka.coordinator.share.generated.ShareSnapshotValue;
+import org.apache.kafka.coordinator.share.generated.ShareUpdateKey;
 import org.apache.kafka.coordinator.share.generated.ShareUpdateValue;
 import org.apache.kafka.coordinator.share.metrics.ShareCoordinatorMetrics;
+import org.apache.kafka.image.ClusterImage;
 import org.apache.kafka.image.MetadataImage;
 import org.apache.kafka.image.TopicImage;
 import org.apache.kafka.image.TopicsImage;
-import org.apache.kafka.metadata.PartitionRegistration;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
 import org.apache.kafka.server.share.SharePartitionKey;
 import org.apache.kafka.server.share.persister.PartitionFactory;
 import org.apache.kafka.server.share.persister.PersisterStateBatch;
 import org.apache.kafka.timeline.SnapshotRegistry;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.mock;
@@ -77,11 +82,15 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+@SuppressWarnings("ClassDataAbstractionCoupling")
 class ShareCoordinatorShardTest {
 
     private static final String GROUP_ID = "group1";
     private static final Uuid TOPIC_ID = Uuid.randomUuid();
+    private static final Uuid TOPIC_ID_2 = Uuid.randomUuid();
     private static final int PARTITION = 0;
+    private static final SharePartitionKey SHARE_PARTITION_KEY = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+    private static final Time TIME = new MockTime();
 
     public static class ShareCoordinatorShardBuilder {
         private final LogContext logContext = new LogContext();
@@ -89,12 +98,13 @@ class ShareCoordinatorShardTest {
         private final CoordinatorMetrics coordinatorMetrics = mock(CoordinatorMetrics.class);
         private final CoordinatorMetricsShard metricsShard = mock(CoordinatorMetricsShard.class);
         private final SnapshotRegistry snapshotRegistry = new SnapshotRegistry(logContext);
-        private MetadataImage metadataImage = null;
+        private CoordinatorMetadataImage metadataImage = null;
         private Map<String, String> configOverrides = new HashMap<>();
         ShareCoordinatorOffsetsManager offsetsManager = mock(ShareCoordinatorOffsetsManager.class);
+        private Time time;
 
         ShareCoordinatorShard build() {
-            if (metadataImage == null) metadataImage = mock(MetadataImage.class, RETURNS_DEEP_STUBS);
+            if (metadataImage == null) metadataImage = mock(CoordinatorMetadataImage.class, RETURNS_DEEP_STUBS);
             if (config == null) {
                 config = ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap(configOverrides));
             }
@@ -105,10 +115,13 @@ class ShareCoordinatorShardTest {
                 coordinatorMetrics,
                 metricsShard,
                 snapshotRegistry,
-                offsetsManager
+                offsetsManager,
+                time == null ? TIME : time
             );
-            when(metadataImage.topics().getTopic((Uuid) any())).thenReturn(mock(TopicImage.class));
-            when(metadataImage.topics().getPartition(any(), anyInt())).thenReturn(mock(PartitionRegistration.class));
+
+            var topicMetadata = mock(CoordinatorMetadataImage.TopicMetadata.class);
+            when(topicMetadata.partitionCount()).thenReturn(PARTITION + 1);
+            when(metadataImage.topicMetadata((Uuid) any())).thenReturn(Optional.of(topicMetadata));
             shard.onNewMetadataImage(metadataImage, null);
             return shard;
         }
@@ -122,6 +135,11 @@ class ShareCoordinatorShardTest {
             this.offsetsManager = offsetsManager;
             return this;
         }
+
+        public ShareCoordinatorShardBuilder setTime(Time time) {
+            this.time = time;
+            return this;
+        }
     }
 
     private void writeAndReplayDefaultRecord(ShareCoordinatorShard shard) {
@@ -129,6 +147,20 @@ class ShareCoordinatorShardTest {
     }
 
     private void writeAndReplayRecord(ShareCoordinatorShard shard, int leaderEpoch) {
+        // Read is necessary before write!
+        ReadShareGroupStateRequestData readRequest = new ReadShareGroupStateRequestData()
+            .setGroupId(GROUP_ID)
+            .setTopics(List.of(new ReadShareGroupStateRequestData.ReadStateData()
+                .setTopicId(TOPIC_ID)
+                .setPartitions(List.of(new ReadShareGroupStateRequestData.PartitionData()
+                    .setPartition(PARTITION)
+                    .setLeaderEpoch(leaderEpoch)
+                ))
+            ));
+
+        CoordinatorResult<ReadShareGroupStateResponseData, CoordinatorRecord> result = shard.readStateAndMaybeUpdateLeaderEpoch(readRequest);
+
+        shard.replay(0L, 0L, (short) 0, result.records().get(0));
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -145,15 +177,20 @@ class ShareCoordinatorShardTest {
                         .setDeliveryCount((short) 1)
                         .setDeliveryState((byte) 0)))))));
 
-        CoordinatorResult<WriteShareGroupStateResponseData, CoordinatorRecord> result = shard.writeState(request);
+        CoordinatorResult<WriteShareGroupStateResponseData, CoordinatorRecord> result2 = shard.writeState(request);
 
-        shard.replay(0L, 0L, (short) 0, result.records().get(0));
+        shard.replay(0L, 0L, (short) 0, result2.records().get(0));
+    }
+
+    private ShareCoordinatorShard shard;
+
+    @BeforeEach
+    public void setUp() {
+        shard = new ShareCoordinatorShardBuilder().build();
     }
 
     @Test
     public void testReplayWithShareSnapshot() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         long offset = 0;
         long producerId = 0;
         short producerEpoch = 0;
@@ -218,10 +255,40 @@ class ShareCoordinatorShardTest {
     }
 
     @Test
-    public void testWriteStateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
+    public void testWriteFailsOnUninitializedPartition() {
+        WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
+            .setGroupId(GROUP_ID)
+            .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
+                .setTopicId(TOPIC_ID)
+                .setPartitions(List.of(new WriteShareGroupStateRequestData.PartitionData()
+                    .setPartition(PARTITION)
+                    .setStartOffset(0)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(0)
+                    .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
+                        .setFirstOffset(0)
+                        .setLastOffset(10)
+                        .setDeliveryCount((short) 1)
+                        .setDeliveryState((byte) 0)))))));
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        CoordinatorResult<WriteShareGroupStateResponseData, CoordinatorRecord> result = shard.writeState(request);
+
+        WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toErrorResponseData(
+            TOPIC_ID, PARTITION,
+            Errors.INVALID_REQUEST,
+            ShareCoordinatorShard.WRITE_UNINITIALIZED_SHARE_PARTITION.getMessage()
+        );
+        List<CoordinatorRecord> expectedRecords = List.of();
+
+        assertEquals(expectedData, result.response());
+        assertEquals(expectedRecords, result.records());
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+    }
+
+    @Test
+    public void testWriteStateSuccess() {
+        initSharePartition(shard, SHARE_PARTITION_KEY);
+        writeAndReplayRecord(shard, 0);
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -243,25 +310,24 @@ class ShareCoordinatorShardTest {
         shard.replay(0L, 0L, (short) 0, result.records().get(0));
 
         WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0))
+        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), TIME.milliseconds())
         ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0))
-        ).value().message()), shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
-        verify(shard.getMetricsShard()).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
+        assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), TIME.milliseconds())
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        verify(shard.getMetricsShard(), times(3)).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
     }
 
     @Test
     public void testSubsequentWriteStateSnapshotEpochUpdatesSuccessfully() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
+        writeAndReplayRecord(shard, 0);
 
         WriteShareGroupStateRequestData request1 = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -298,16 +364,16 @@ class ShareCoordinatorShardTest {
         shard.replay(0L, 0L, (short) 0, result.records().get(0));
 
         WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request1.topics().get(0).partitions().get(0))
+        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request1.topics().get(0).partitions().get(0), TIME.milliseconds())
         ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
         assertEquals(groupOffset(expectedRecords.get(0).value().message()),
-            shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+            shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
 
         result = shard.writeState(request2);
 
@@ -316,31 +382,27 @@ class ShareCoordinatorShardTest {
         expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
         // The snapshot epoch here will be 1 since this is a snapshot update record,
         // and it refers to parent share snapshot.
-        expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotUpdateRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request2.topics().get(0).partitions().get(0), 0)
+        expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request2.topics().get(0).partitions().get(0), TIME.milliseconds())
         ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
         ShareGroupOffset incrementalUpdate = groupOffset(expectedRecords.get(0).value().message());
-        ShareGroupOffset combinedState = shard.getShareStateMapValue(shareCoordinatorKey);
+        ShareGroupOffset combinedState = shard.getShareStateMapValue(SHARE_PARTITION_KEY);
         assertEquals(incrementalUpdate.snapshotEpoch(), combinedState.snapshotEpoch());
         assertEquals(incrementalUpdate.leaderEpoch(), combinedState.leaderEpoch());
         assertEquals(incrementalUpdate.startOffset(), combinedState.startOffset());
         // The batches should have combined to 1 since same state.
         assertEquals(List.of(new PersisterStateBatch(0, 20, (byte) 0, (short) 1)),
             combinedState.stateBatches());
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testWriteStateInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         int partition = -1;
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -366,16 +428,15 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testWriteNullMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-        shard.onNewMetadataImage(null, null);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        shard.onNewMetadataImage(null, null);
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -400,16 +461,13 @@ class ShareCoordinatorShardTest {
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
-
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(-1, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testWriteStateFencedLeaderEpochError() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
+        writeAndReplayRecord(shard, 1);
 
         WriteShareGroupStateRequestData request1 = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -419,80 +477,29 @@ class ShareCoordinatorShardTest {
                     .setPartition(PARTITION)
                     .setStartOffset(0)
                     .setStateEpoch(0)
-                    .setLeaderEpoch(5)
+                    .setLeaderEpoch(0)
                     .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
                         .setFirstOffset(0)
                         .setLastOffset(10)
-                        .setDeliveryCount((short) 1)
-                        .setDeliveryState((byte) 0)))))));
-
-        WriteShareGroupStateRequestData request2 = new WriteShareGroupStateRequestData()
-            .setGroupId(GROUP_ID)
-            .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
-                .setTopicId(TOPIC_ID)
-                .setPartitions(List.of(new WriteShareGroupStateRequestData.PartitionData()
-                    .setPartition(PARTITION)
-                    .setStartOffset(0)
-                    .setStateEpoch(0)
-                    .setLeaderEpoch(3) // Lower leader epoch in the second request.
-                    .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
-                        .setFirstOffset(11)
-                        .setLastOffset(20)
                         .setDeliveryCount((short) 1)
                         .setDeliveryState((byte) 0)))))));
 
         CoordinatorResult<WriteShareGroupStateResponseData, CoordinatorRecord> result = shard.writeState(request1);
 
-        shard.replay(0L, 0L, (short) 0, result.records().get(0));
-
-        WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request1.topics().get(0).partitions().get(0))
-        ));
-
-        assertEquals(expectedData, result.response());
-        assertEquals(expectedRecords, result.records());
-
-        assertEquals(groupOffset(expectedRecords.get(0).value().message()),
-            shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(5, shard.getLeaderMapValue(shareCoordinatorKey));
-
-        result = shard.writeState(request2);
-
-        // Since the leader epoch in the second request was lower than the one in the first request, FENCED_LEADER_EPOCH error is expected.
-        expectedData = WriteShareGroupStateResponse.toErrorResponseData(
+        WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toErrorResponseData(
             TOPIC_ID, PARTITION, Errors.FENCED_LEADER_EPOCH, Errors.FENCED_LEADER_EPOCH.message());
-        expectedRecords = List.of();
+        List<CoordinatorRecord> expectedRecords = List.of();
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
-
-        // No changes to the leaderMap.
-        assertEquals(5, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(1, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testWriteStateFencedStateEpochError() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY, 1);
 
         WriteShareGroupStateRequestData request1 = new WriteShareGroupStateRequestData()
-            .setGroupId(GROUP_ID)
-            .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
-                .setTopicId(TOPIC_ID)
-                .setPartitions(List.of(new WriteShareGroupStateRequestData.PartitionData()
-                    .setPartition(PARTITION)
-                    .setStartOffset(0)
-                    .setStateEpoch(1)
-                    .setLeaderEpoch(5)
-                    .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
-                        .setFirstOffset(0)
-                        .setLastOffset(10)
-                        .setDeliveryCount((short) 1)
-                        .setDeliveryState((byte) 0)))))));
-
-        WriteShareGroupStateRequestData request2 = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
                 .setTopicId(TOPIC_ID)
@@ -509,40 +516,43 @@ class ShareCoordinatorShardTest {
 
         CoordinatorResult<WriteShareGroupStateResponseData, CoordinatorRecord> result = shard.writeState(request1);
 
-        shard.replay(0L, 0L, (short) 0, result.records().get(0));
-
-        WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request1.topics().get(0).partitions().get(0))
-        ));
-
-        assertEquals(expectedData, result.response());
-        assertEquals(expectedRecords, result.records());
-
-        assertEquals(groupOffset(expectedRecords.get(0).value().message()),
-            shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(5, shard.getLeaderMapValue(shareCoordinatorKey));
-
-        result = shard.writeState(request2);
-
-        // Since the leader epoch in the second request was lower than the one in the first request, FENCED_LEADER_EPOCH error is expected.
-        expectedData = WriteShareGroupStateResponse.toErrorResponseData(
+        WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toErrorResponseData(
             TOPIC_ID, PARTITION, Errors.FENCED_STATE_EPOCH, Errors.FENCED_STATE_EPOCH.message());
-        expectedRecords = List.of();
+        List<CoordinatorRecord> expectedRecords = List.of();
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
+        assertNotEquals(5, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
 
         // No changes to the stateEpochMap.
-        assertEquals(1, shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertEquals(1, shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
+    }
+
+    @Test
+    public void testReadFailsOnUninitializedPartition() {
+        ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
+            .setGroupId(GROUP_ID)
+            .setTopics(List.of(new ReadShareGroupStateRequestData.ReadStateData()
+                .setTopicId(TOPIC_ID)
+                .setPartitions(List.of(new ReadShareGroupStateRequestData.PartitionData()
+                    .setPartition(PARTITION)
+                    .setLeaderEpoch(1)))));
+
+        CoordinatorResult<ReadShareGroupStateResponseData, CoordinatorRecord> result = shard.readStateAndMaybeUpdateLeaderEpoch(request);
+
+        assertEquals(ReadShareGroupStateResponse.toErrorResponseData(
+            TOPIC_ID,
+            PARTITION,
+            Errors.INVALID_REQUEST,
+            ShareCoordinatorShard.READ_UNINITIALIZED_SHARE_PARTITION.getMessage()
+        ), result.response());
+
+        assertNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey coordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
@@ -568,15 +578,12 @@ class ShareCoordinatorShardTest {
             )
         ), result.response());
 
-        assertEquals(0, shard.getLeaderMapValue(coordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateSummarySuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey coordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
         ReadShareGroupStateSummaryRequestData request = new ReadShareGroupStateSummaryRequestData()
@@ -593,22 +600,19 @@ class ShareCoordinatorShardTest {
             TOPIC_ID,
             PARTITION,
             0,
+            0,
             0
         ), result.response());
 
-        assertEquals(0, shard.getLeaderMapValue(coordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        int partition = -1;
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+        int partition = -1;
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new ReadShareGroupStateRequestData.ReadStateData()
@@ -625,19 +629,15 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
 
         // Leader epoch should not be changed because the request failed.
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateSummaryInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        int partition = -1;
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+        int partition = -1;
         ReadShareGroupStateSummaryRequestData request = new ReadShareGroupStateSummaryRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
@@ -654,18 +654,15 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
 
         // Leader epoch should not be changed because the request failed.
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadNullMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
         shard.onNewMetadataImage(null, null);
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -683,18 +680,15 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
 
         // Leader epoch should not be changed because the request failed.
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateFencedLeaderEpochError() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         int leaderEpoch = 5;
-
         writeAndReplayRecord(shard, leaderEpoch); // leaderEpoch in the leaderMap will be 5.
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -714,7 +708,7 @@ class ShareCoordinatorShardTest {
 
         assertEquals(expectedData, result.response());
 
-        assertEquals(leaderEpoch, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(leaderEpoch, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
@@ -744,11 +738,12 @@ class ShareCoordinatorShardTest {
         //        -Share leader acks batch 3 and sends the new startOffset and the state of batch 3 to share coordinator.
         //        -Share coordinator writes the snapshot with startOffset 110 and batch 3.
         //        -batch2 should NOT be lost
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder()
-            .setConfigOverrides(Collections.singletonMap(ShareCoordinatorConfig.SNAPSHOT_UPDATE_RECORDS_PER_SNAPSHOT_CONFIG, "0"))
+        shard = new ShareCoordinatorShardBuilder()
+            .setConfigOverrides(Map.of(ShareCoordinatorConfig.SNAPSHOT_UPDATE_RECORDS_PER_SNAPSHOT_CONFIG, "0"))
             .build();
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
+        writeAndReplayRecord(shard, 0);
 
         // Set initial state.
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
@@ -760,7 +755,7 @@ class ShareCoordinatorShardTest {
                     .setStartOffset(100)
                     .setStateEpoch(0)
                     .setLeaderEpoch(0)
-                    .setStateBatches(Arrays.asList(
+                    .setStateBatches(List.of(
                         new WriteShareGroupStateRequestData.StateBatch()    //b1
                             .setFirstOffset(100)
                             .setLastOffset(109)
@@ -785,17 +780,17 @@ class ShareCoordinatorShardTest {
 
         WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
         List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0))
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), 3, TIME.milliseconds())
         ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
         assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0))
-        ).value().message()), shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
-        verify(shard.getMetricsShard()).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), 3, TIME.milliseconds())
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        verify(shard.getMetricsShard(), times(3)).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
 
         // Acknowledge b1.
         WriteShareGroupStateRequestData requestUpdateB1 = new WriteShareGroupStateRequestData()
@@ -846,11 +841,13 @@ class ShareCoordinatorShardTest {
             .setStartOffset(110)
             .setLeaderEpoch(0)
             .setStateEpoch(0)
-            .setSnapshotEpoch(2)    // since 2nd share snapshot
-            .setStateBatches(Arrays.asList(
+            .setSnapshotEpoch(5)    // since subsequent share snapshot
+            .setStateBatches(List.of(
                 new PersisterStateBatch(110, 119, (byte) 1, (short) 2),  // b2 not lost
                 new PersisterStateBatch(120, 129, (byte) 2, (short) 1)
             ))
+            .setCreateTimestamp(TIME.milliseconds())
+            .setWriteTimestamp(TIME.milliseconds())
             .build();
         List<CoordinatorRecord> expectedRecordsFinal = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
             GROUP_ID, TOPIC_ID, PARTITION, offsetFinal
@@ -861,15 +858,15 @@ class ShareCoordinatorShardTest {
 
         assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
             GROUP_ID, TOPIC_ID, PARTITION, offsetFinal
-        ).value().message()), shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
-        verify(shard.getMetricsShard(), times(3)).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        verify(shard.getMetricsShard(), times(5)).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
     }
 
     @Test
     public void testLastRedundantOffset() {
         ShareCoordinatorOffsetsManager manager = mock(ShareCoordinatorOffsetsManager.class);
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder()
+        shard = new ShareCoordinatorShardBuilder()
             .setOffsetsManager(manager)
             .build();
 
@@ -879,9 +876,7 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testReadStateLeaderEpochUpdateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -901,27 +896,29 @@ class ShareCoordinatorShardTest {
             PartitionFactory.UNINITIALIZED_START_OFFSET,
             PartitionFactory.DEFAULT_STATE_EPOCH,
             List.of());
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
             GROUP_ID, TOPIC_ID, PARTITION, new ShareGroupOffset.Builder()
                 .setStartOffset(PartitionFactory.UNINITIALIZED_START_OFFSET)
                 .setLeaderEpoch(2)
                 .setStateBatches(List.of())
                 .setSnapshotEpoch(0)
                 .setStateEpoch(PartitionFactory.DEFAULT_STATE_EPOCH)
+                .setCreateTimestamp(TIME.milliseconds())
+                .setWriteTimestamp(TIME.milliseconds())
                 .build()
         ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertEquals(groupOffset(expectedRecords.get(0).value().message()), shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(2, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(groupOffset(expectedRecords.get(0).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(2, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
         verify(shard.getMetricsShard()).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
     }
 
     @Test
     public void testReadStateLeaderEpochUpdateNoUpdate() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         ReadShareGroupStateRequestData request1 = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -968,10 +965,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeleteStateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new DeleteShareGroupStateRequestData.DeleteStateData()
@@ -979,9 +972,7 @@ class ShareCoordinatorShardTest {
                 .setPartitions(List.of(new DeleteShareGroupStateRequestData.PartitionData()
                     .setPartition(PARTITION)))));
 
-        CoordinatorResult<DeleteShareGroupStateResponseData, CoordinatorRecord> result = shard.deleteState(request);
-
-        // apply a record in to verify delete
+        // Apply a record to the state machine so that delete can be verified.
         CoordinatorRecord record = ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
             GROUP_ID,
             TOPIC_ID,
@@ -1002,11 +993,13 @@ class ShareCoordinatorShardTest {
                 .build()
         );
         shard.replay(0L, 0L, (short) 0, record);
-        assertNotNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNotNull(shard.getLeaderMapValue(shareCoordinatorKey));
-        assertNotNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertNotNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNotNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        assertNotNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
 
-        // apply tombstone
+        CoordinatorResult<DeleteShareGroupStateResponseData, CoordinatorRecord> result = shard.deleteState(request);
+
+        // Apply tombstone.
         shard.replay(0L, 0L, (short) 0, result.records().get(0));
 
         DeleteShareGroupStateResponseData expectedData = DeleteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
@@ -1018,17 +1011,13 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
-        assertNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
-    public void testDeleteStateFirstRecordDeleteSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+    public void testDeleteStateUnintializedRecord() {
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new DeleteShareGroupStateRequestData.DeleteStateData()
@@ -1037,32 +1026,19 @@ class ShareCoordinatorShardTest {
                     .setPartition(PARTITION)))));
 
         CoordinatorResult<DeleteShareGroupStateResponseData, CoordinatorRecord> result = shard.deleteState(request);
-        
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
-        assertNull(shard.getStateEpochMapValue(shareCoordinatorKey));
 
-        // apply tombstone
-        shard.replay(0L, 0L, (short) 0, result.records().get(0));
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
 
         DeleteShareGroupStateResponseData expectedData = DeleteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
-        List<CoordinatorRecord> expectedRecords = List.of(
-            ShareCoordinatorRecordHelpers.newShareStateTombstoneRecord(
-                GROUP_ID, TOPIC_ID, PARTITION)
-        );
 
         assertEquals(expectedData, result.response());
-        assertEquals(expectedRecords, result.records());
-
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
-        assertNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertEquals(List.of(), result.records());
     }
 
     @Test
     public void testDeleteStateInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         // invalid partition
         int partition = -1;
 
@@ -1086,7 +1062,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeleteNullMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         shard.onNewMetadataImage(null, null);
 
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
@@ -1108,9 +1083,8 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeleteTopicIdNonExistentInMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
-        shard.onNewMetadataImage(image, null);
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
 
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -1140,9 +1114,9 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeletePartitionIdNonExistentInMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
-        shard.onNewMetadataImage(image, null);
+        when(image.cluster()).thenReturn(mock(ClusterImage.class));
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
 
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -1153,12 +1127,10 @@ class ShareCoordinatorShardTest {
 
         // topic id found in cache
         TopicsImage topicsImage = mock(TopicsImage.class);
-        when(topicsImage.getTopic(eq(TOPIC_ID))).thenReturn(
-            mock(TopicImage.class)
-        );
-        when(image.topics()).thenReturn(
-            topicsImage
-        );
+        TopicImage topicImage = mock(TopicImage.class);
+        when(topicImage.partitions()).thenReturn(Map.of());
+        when(topicsImage.getTopic(eq(TOPIC_ID))).thenReturn(topicImage);
+        when(image.topics()).thenReturn(topicsImage);
 
         // partition id not found
         when(topicsImage.getPartition(eq(TOPIC_ID), eq(0))).thenReturn(
@@ -1173,15 +1145,11 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
         verify(topicsImage, times(1)).getTopic(eq(TOPIC_ID));
-        verify(topicsImage, times(1)).getPartition(eq(TOPIC_ID), eq(0));
+        verify(topicImage, times(1)).partitions();
     }
 
     @Test
     public void testInitializeStateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
         InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new InitializeShareGroupStateRequestData.InitializeStateData()
@@ -1192,8 +1160,8 @@ class ShareCoordinatorShardTest {
                     .setStateEpoch(5)))
             ));
 
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
 
         CoordinatorResult<InitializeShareGroupStateResponseData, CoordinatorRecord> result = shard.initializeState(request);
         result.records().forEach(record -> shard.replay(0L, 0L, (short) 0, record));
@@ -1201,20 +1169,18 @@ class ShareCoordinatorShardTest {
         InitializeShareGroupStateResponseData expectedData = InitializeShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
         List<CoordinatorRecord> expectedRecords = List.of(
             ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-                GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0))
+                GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), TIME.milliseconds())
             ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertNotNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNotNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertNotNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNotNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testInitializeStateInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         // invalid partition
         int partition = -1;
 
@@ -1267,7 +1233,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testInitializeNullMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         shard.onNewMetadataImage(null, null);
 
         InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
@@ -1291,9 +1256,8 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testInitializeTopicIdNonExistentInMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
-        shard.onNewMetadataImage(image, null);
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
 
         InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -1321,9 +1285,9 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testInitializePartitionIdNonExistentInMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
-        shard.onNewMetadataImage(image, null);
+        when(image.cluster()).thenReturn(mock(ClusterImage.class));
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
 
         InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -1335,8 +1299,10 @@ class ShareCoordinatorShardTest {
             ));
 
         // topic id found in cache
+        TopicImage topicImage = mock(TopicImage.class);
+        when(topicImage.partitions()).thenReturn(Map.of());
         TopicsImage topicsImage = mock(TopicsImage.class);
-        when(topicsImage.getTopic(eq(TOPIC_ID))).thenReturn(mock(TopicImage.class));
+        when(topicsImage.getTopic(eq(TOPIC_ID))).thenReturn(topicImage);
         when(image.topics()).thenReturn(topicsImage);
 
         // partition id not found
@@ -1350,7 +1316,426 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
         verify(topicsImage, times(1)).getTopic(eq(TOPIC_ID));
-        verify(topicsImage, times(1)).getPartition(eq(TOPIC_ID), eq(0));
+        verify(topicImage, times(1)).partitions();
+    }
+
+    @Test
+    public void testSnapshotColdPartitionsNoEligiblePartitions() {
+        MetadataImage image = mock(MetadataImage.class);
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
+        int offset = 0;
+        int producerId = 0;
+        short producerEpoch = 0;
+        int leaderEpoch = 0;
+
+        long timestamp = TIME.milliseconds();
+
+        CoordinatorRecord record1 = CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID)
+                .setPartition(0),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setSnapshotEpoch(0)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setCreateTimestamp(timestamp)
+                    .setWriteTimestamp(timestamp)
+                    .setStateBatches(List.of(
+                        new ShareSnapshotValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        CoordinatorRecord record2 = CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID)
+                .setPartition(1),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setSnapshotEpoch(0)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setCreateTimestamp(timestamp)
+                    .setWriteTimestamp(timestamp)
+                    .setStateBatches(List.of(
+                        new ShareSnapshotValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        shard.replay(offset, producerId, producerEpoch, record1);
+        shard.replay(offset + 1, producerId, producerEpoch, record2);
+
+        assertNotNull(shard.getShareStateMapValue(SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, 0)));
+        assertNotNull(shard.getShareStateMapValue(SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, 1)));
+
+        TIME.sleep(5000);   // Less than config.
+
+        assertEquals(0, shard.snapshotColdPartitions().records().size());
+    }
+
+    @Test
+    public void testSnapshotColdPartitionsSnapshotUpdateNotConsidered() {
+        MetadataImage image = mock(MetadataImage.class);
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
+        int offset = 0;
+        int producerId = 0;
+        short producerEpoch = 0;
+        int leaderEpoch = 0;
+
+        long timestamp = TIME.milliseconds();
+
+        CoordinatorRecord record1 = CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID)
+                .setPartition(0),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setSnapshotEpoch(0)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setCreateTimestamp(timestamp)
+                    .setWriteTimestamp(timestamp)
+                    .setStateBatches(List.of(
+                        new ShareSnapshotValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        SharePartitionKey key = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, 0);
+
+        shard.replay(offset, producerId, producerEpoch, record1);
+        assertNotNull(shard.getShareStateMapValue(key));
+
+        long sleep = 12000;
+        TIME.sleep(sleep);
+
+        List<CoordinatorRecord> expectedRecords = List.of(
+            CoordinatorRecord.record(
+                new ShareSnapshotKey()
+                    .setGroupId(GROUP_ID)
+                    .setTopicId(TOPIC_ID)
+                    .setPartition(0),
+                new ApiMessageAndVersion(
+                    new ShareSnapshotValue()
+                        .setSnapshotEpoch(1)
+                        .setStateEpoch(0)
+                        .setLeaderEpoch(leaderEpoch)
+                        .setCreateTimestamp(timestamp)
+                        .setWriteTimestamp(timestamp + sleep)
+                        .setStateBatches(List.of(
+                            new ShareSnapshotValue.StateBatch()
+                                .setFirstOffset(0)
+                                .setLastOffset(10)
+                                .setDeliveryCount((short) 1)
+                                .setDeliveryState((byte) 0))),
+                    (short) 0
+                )
+            )
+        );
+
+        assertEquals(expectedRecords, shard.snapshotColdPartitions().records());
+
+        shard.replay(offset + 1, producerId, producerEpoch, expectedRecords.get(0));
+        assertNotNull(shard.getShareStateMapValue(key));
+
+        CoordinatorRecord record2 = CoordinatorRecord.record(
+            new ShareUpdateKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID)
+                .setPartition(0),
+            new ApiMessageAndVersion(
+                new ShareUpdateValue()
+                    .setSnapshotEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setStateBatches(List.of(
+                        new ShareUpdateValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        shard.replay(offset + 2, producerId, producerEpoch, record2);
+
+        TIME.sleep(sleep);
+
+        assertNotNull(shard.getShareStateMapValue(key));
+        assertEquals(timestamp + sleep, shard.getShareStateMapValue(key).writeTimestamp()); // No snapshot since update has no time info.
+    }
+
+    @Test
+    public void testSnapshotColdPartitionsDoesNotPerpetuallySnapshot() {
+        MetadataImage image = mock(MetadataImage.class);
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
+        int offset = 0;
+        int producerId = 0;
+        short producerEpoch = 0;
+        int leaderEpoch = 0;
+
+        long timestamp = TIME.milliseconds();
+
+        CoordinatorRecord record1 = CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID)
+                .setPartition(0),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setSnapshotEpoch(0)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setCreateTimestamp(timestamp)
+                    .setWriteTimestamp(timestamp)
+                    .setStateBatches(List.of(
+                        new ShareSnapshotValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        shard.replay(offset, producerId, producerEpoch, record1);
+        assertNotNull(shard.getShareStateMapValue(SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, 0)));
+
+        long sleep = 12000;
+        TIME.sleep(sleep);
+
+        List<CoordinatorRecord> expectedRecords = List.of(
+            CoordinatorRecord.record(
+                new ShareSnapshotKey()
+                    .setGroupId(GROUP_ID)
+                    .setTopicId(TOPIC_ID)
+                    .setPartition(0),
+                new ApiMessageAndVersion(
+                    new ShareSnapshotValue()
+                        .setSnapshotEpoch(1)
+                        .setStateEpoch(0)
+                        .setLeaderEpoch(leaderEpoch)
+                        .setCreateTimestamp(timestamp)
+                        .setWriteTimestamp(timestamp + sleep)
+                        .setStateBatches(List.of(
+                            new ShareSnapshotValue.StateBatch()
+                                .setFirstOffset(0)
+                                .setLastOffset(10)
+                                .setDeliveryCount((short) 1)
+                                .setDeliveryState((byte) 0))),
+                    (short) 0
+                )
+            )
+        );
+
+        assertEquals(expectedRecords, shard.snapshotColdPartitions().records());
+
+        shard.replay(offset + 1, producerId, producerEpoch, expectedRecords.get(0));
+        assertNotNull(shard.getShareStateMapValue(SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, 0)));
+
+        // Since all existing snapshots are already snapshotted, no new records will be created.
+        TIME.sleep(12000);
+
+        assertEquals(0, shard.snapshotColdPartitions().records().size());
+    }
+
+    @Test
+    public void testSnapshotColdPartitionsPartialEligiblePartitions() {
+        MetadataImage image = mock(MetadataImage.class);
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
+        int offset = 0;
+        int producerId = 0;
+        short producerEpoch = 0;
+        int leaderEpoch = 0;
+        SharePartitionKey key0 = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, 0);
+        SharePartitionKey key1 = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, 1);
+
+        long timestamp = TIME.milliseconds();
+        int record1SnapshotEpoch = 0;
+
+        CoordinatorRecord record1 = CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID)
+                .setPartition(0),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setSnapshotEpoch(record1SnapshotEpoch)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setCreateTimestamp(timestamp)
+                    .setWriteTimestamp(timestamp)
+                    .setStateBatches(List.of(
+                        new ShareSnapshotValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        long delta = 15000; // 15 seconds
+
+        CoordinatorRecord record2 = CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID)
+                .setPartition(1),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setSnapshotEpoch(0)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setCreateTimestamp(timestamp + delta)
+                    .setWriteTimestamp(timestamp + delta)
+                    .setStateBatches(List.of(
+                        new ShareSnapshotValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        shard.replay(offset, producerId, producerEpoch, record1);
+        shard.replay(offset + 1, producerId, producerEpoch, record2);
+
+        assertNotNull(shard.getShareStateMapValue(key0));
+        assertNotNull(shard.getShareStateMapValue(key1));
+        assertEquals(timestamp, shard.getShareStateMapValue(key0).writeTimestamp());
+        assertEquals(timestamp + delta, shard.getShareStateMapValue(key1).writeTimestamp());
+
+        long sleep = 12000;
+        TIME.sleep(sleep);  // Record 1 is eligible now.
+
+        List<CoordinatorRecord> expectedRecords = List.of(
+            CoordinatorRecord.record(
+                new ShareSnapshotKey()
+                    .setGroupId(GROUP_ID)
+                    .setTopicId(TOPIC_ID)
+                    .setPartition(0),
+                new ApiMessageAndVersion(
+                    new ShareSnapshotValue()
+                        .setSnapshotEpoch(record1SnapshotEpoch + 1)
+                        .setStateEpoch(0)
+                        .setLeaderEpoch(leaderEpoch)
+                        .setCreateTimestamp(timestamp)
+                        .setWriteTimestamp(timestamp + sleep)
+                        .setStateBatches(List.of(
+                            new ShareSnapshotValue.StateBatch()
+                                .setFirstOffset(0)
+                                .setLastOffset(10)
+                                .setDeliveryCount((short) 1)
+                                .setDeliveryState((byte) 0))),
+                    (short) 0
+                )
+            )
+        );
+
+        List<CoordinatorRecord> records = shard.snapshotColdPartitions().records();
+        assertEquals(expectedRecords, records);
+
+        shard.replay(offset + 2, producerId, producerEpoch, records.get(0));
+
+        assertEquals(timestamp + delta, shard.getShareStateMapValue(key1).writeTimestamp());
+        assertEquals(timestamp + sleep, shard.getShareStateMapValue(key0).writeTimestamp());
+    }
+
+    @Test
+    public void testOnTopicsDeletedEmptyTopicIds() {
+        CoordinatorResult<Void, CoordinatorRecord> expectedResult = new CoordinatorResult<>(List.of());
+        assertEquals(expectedResult, shard.maybeCleanupShareState(Set.of()));
+
+        // No internal state map.
+        shard = new ShareCoordinatorShardBuilder().build();
+        assertEquals(expectedResult, shard.maybeCleanupShareState(Set.of(Uuid.randomUuid())));
+    }
+
+    @Test
+    public void testOnTopicsDeletedTopicIds() {
+        MetadataImage image = mock(MetadataImage.class);
+        shard.onNewMetadataImage(new KRaftCoordinatorMetadataImage(image), null);
+
+        int offset = 0;
+        int producerId = 0;
+        short producerEpoch = 0;
+        int leaderEpoch = 0;
+        SharePartitionKey key1 = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, 0);
+
+        long timestamp = TIME.milliseconds();
+        int record1SnapshotEpoch = 0;
+
+        CoordinatorRecord record1 = CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID)
+                .setPartition(0),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setSnapshotEpoch(record1SnapshotEpoch)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setCreateTimestamp(timestamp)
+                    .setWriteTimestamp(timestamp)
+                    .setStateBatches(List.of(
+                        new ShareSnapshotValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        CoordinatorRecord record2 = CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(GROUP_ID)
+                .setTopicId(TOPIC_ID_2)
+                .setPartition(0),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setSnapshotEpoch(record1SnapshotEpoch)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(leaderEpoch)
+                    .setCreateTimestamp(timestamp)
+                    .setWriteTimestamp(timestamp)
+                    .setStateBatches(List.of(
+                        new ShareSnapshotValue.StateBatch()
+                            .setFirstOffset(0)
+                            .setLastOffset(10)
+                            .setDeliveryCount((short) 1)
+                            .setDeliveryState((byte) 0))),
+                (short) 0
+            )
+        );
+
+        shard.replay(offset, producerId, producerEpoch, record1);
+        shard.replay(offset + 1, producerId, producerEpoch, record2);
+
+        CoordinatorResult<Void, CoordinatorRecord> expectedResult = new CoordinatorResult<>(List.of(
+            ShareCoordinatorRecordHelpers.newShareStateTombstoneRecord(key1.groupId(), key1.topicId(), key1.partition())
+        ));
+
+        assertEquals(expectedResult, shard.maybeCleanupShareState(Set.of(TOPIC_ID)));
     }
 
     private static ShareGroupOffset groupOffset(ApiMessage record) {
@@ -1358,5 +1743,24 @@ class ShareCoordinatorShardTest {
             return ShareGroupOffset.fromRecord((ShareSnapshotValue) record);
         }
         return ShareGroupOffset.fromRecord((ShareUpdateValue) record);
+    }
+
+    private void initSharePartition(ShareCoordinatorShard shard, SharePartitionKey key) {
+        initSharePartition(shard, key, 0);
+    }
+    private void initSharePartition(ShareCoordinatorShard shard, SharePartitionKey key, int stateEpoch) {
+        shard.replay(0L, 0L, (short) 0, CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(key.groupId())
+                .setTopicId(key.topicId())
+                .setPartition(key.partition()),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setStateEpoch(stateEpoch)
+                    .setLeaderEpoch(-1)
+                    .setStartOffset(-1),
+                (short) 0
+            )
+        ));
     }
 }
