@@ -20,8 +20,7 @@ package org.apache.kafka.shell.command;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -30,40 +29,40 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class CommandTest {
     @Test
     public void testParseCommands() {
-        assertEquals(new CatCommandHandler(Collections.singletonList("foo")),
-            new Commands(true).parseCommand(Arrays.asList("cat", "foo")));
+        assertEquals(new CatCommandHandler(List.of("foo")),
+            new Commands(true).parseCommand(List.of("cat", "foo")));
         assertEquals(new CdCommandHandler(Optional.empty()),
-            new Commands(true).parseCommand(Collections.singletonList("cd")));
+            new Commands(true).parseCommand(List.of("cd")));
         assertEquals(new CdCommandHandler(Optional.of("foo")),
-            new Commands(true).parseCommand(Arrays.asList("cd", "foo")));
+            new Commands(true).parseCommand(List.of("cd", "foo")));
         assertEquals(new ExitCommandHandler(),
-            new Commands(true).parseCommand(Collections.singletonList("exit")));
+            new Commands(true).parseCommand(List.of("exit")));
         assertEquals(new HelpCommandHandler(),
-            new Commands(true).parseCommand(Collections.singletonList("help")));
+            new Commands(true).parseCommand(List.of("help")));
         assertEquals(new HistoryCommandHandler(3),
-            new Commands(true).parseCommand(Arrays.asList("history", "3")));
+            new Commands(true).parseCommand(List.of("history", "3")));
         assertEquals(new HistoryCommandHandler(Integer.MAX_VALUE),
-            new Commands(true).parseCommand(Collections.singletonList("history")));
-        assertEquals(new LsCommandHandler(Collections.emptyList()),
-            new Commands(true).parseCommand(Collections.singletonList("ls")));
-        assertEquals(new LsCommandHandler(Arrays.asList("abc", "123")),
-            new Commands(true).parseCommand(Arrays.asList("ls", "abc", "123")));
+            new Commands(true).parseCommand(List.of("history")));
+        assertEquals(new LsCommandHandler(List.of()),
+            new Commands(true).parseCommand(List.of("ls")));
+        assertEquals(new LsCommandHandler(List.of("abc", "123")),
+            new Commands(true).parseCommand(List.of("ls", "abc", "123")));
         assertEquals(new PwdCommandHandler(),
-            new Commands(true).parseCommand(Collections.singletonList("pwd")));
+            new Commands(true).parseCommand(List.of("pwd")));
     }
 
     @Test
     public void testParseInvalidCommand() {
         assertEquals(new ErroneousCommandHandler("invalid choice: 'blah' (choose " +
             "from 'cat', 'cd', 'exit', 'find', 'help', 'history', 'ls', 'man', 'pwd', 'tree')"),
-            new Commands(true).parseCommand(Collections.singletonList("blah")));
+            new Commands(true).parseCommand(List.of("blah")));
     }
 
     @Test
     public void testEmptyCommandLine() {
         assertEquals(new NoOpCommandHandler(),
-            new Commands(true).parseCommand(Collections.singletonList("")));
+            new Commands(true).parseCommand(List.of("")));
         assertEquals(new NoOpCommandHandler(),
-            new Commands(true).parseCommand(Collections.emptyList()));
+            new Commands(true).parseCommand(List.of()));
     }
 }
