@@ -45,7 +45,6 @@ import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class LogValidator {
 
@@ -61,32 +60,11 @@ public class LogValidator {
         void recordNoKeyCompactedTopic();
     }
 
-    public static class ValidationResult {
-        public final long logAppendTimeMs;
-        public final MemoryRecords validatedRecords;
-        public final long maxTimestampMs;
-        public final boolean messageSizeMaybeChanged;
-        public final RecordValidationStats recordValidationStats;
-
-        public ValidationResult(long logAppendTimeMs, MemoryRecords validatedRecords, long maxTimestampMs,
-                                boolean messageSizeMaybeChanged,
-                                RecordValidationStats recordValidationStats) {
-            this.logAppendTimeMs = logAppendTimeMs;
-            this.validatedRecords = validatedRecords;
-            this.maxTimestampMs = maxTimestampMs;
-            this.messageSizeMaybeChanged = messageSizeMaybeChanged;
-            this.recordValidationStats = recordValidationStats;
-        }
+    public record ValidationResult(long logAppendTimeMs, MemoryRecords validatedRecords, long maxTimestampMs,
+                                   boolean messageSizeMaybeChanged, RecordValidationStats recordValidationStats) {
     }
 
-    private static class ApiRecordError {
-        final Errors apiError;
-        final RecordError recordError;
-
-        private ApiRecordError(Errors apiError, RecordError recordError) {
-            this.apiError = apiError;
-            this.recordError = recordError;
-        }
+    private record ApiRecordError(Errors apiError, RecordError recordError) {
     }
 
     private final MemoryRecords records;
@@ -205,7 +183,7 @@ public class LogValidator {
                 Optional<ApiRecordError> recordError = validateRecord(batch, topicPartition,
                     record, recordIndex, now, timestampType, timestampBeforeMaxMs, timestampAfterMaxMs, compactedTopic,
                     metricsRecorder);
-                recordError.ifPresent(e -> recordErrors.add(e));
+                recordError.ifPresent(recordErrors::add);
                 // we fail the batch if any record fails, so we stop appending if any record fails
                 if (recordErrors.isEmpty())
                     builder.appendWithOffset(offsetCounter.value++, record);
@@ -612,7 +590,7 @@ public class LogValidator {
 
     private static void processRecordErrors(List<ApiRecordError> recordErrors) {
         if (!recordErrors.isEmpty()) {
-            List<RecordError> errors = recordErrors.stream().map(e -> e.recordError).collect(Collectors.toList());
+            List<RecordError> errors = recordErrors.stream().map(e -> e.recordError).toList();
             if (recordErrors.stream().anyMatch(e -> e.apiError == Errors.INVALID_TIMESTAMP)) {
                 throw new RecordValidationException(new InvalidTimestampException(
                     "One or more records have been rejected due to invalid timestamp"), errors);
