@@ -29,6 +29,7 @@ import org.apache.kafka.clients.admin.ListTopicsResult;
 import org.apache.kafka.clients.admin.ListTransactionsOptions;
 import org.apache.kafka.clients.admin.ListTransactionsResult;
 import org.apache.kafka.clients.admin.ProducerState;
+import org.apache.kafka.clients.admin.TerminateTransactionResult;
 import org.apache.kafka.clients.admin.TopicDescription;
 import org.apache.kafka.clients.admin.TransactionDescription;
 import org.apache.kafka.clients.admin.TransactionListing;
@@ -56,9 +57,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -68,11 +67,6 @@ import java.util.OptionalLong;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.emptyMap;
-import static java.util.Collections.singleton;
-import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
 import static org.apache.kafka.common.KafkaFuture.completedFuture;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -160,7 +154,7 @@ public class TransactionsCommandTest {
     ) throws Exception {
         DescribeProducersResult describeResult = Mockito.mock(DescribeProducersResult.class);
         KafkaFuture<PartitionProducerState> describeFuture = completedFuture(
-            new PartitionProducerState(asList(
+            new PartitionProducerState(List.of(
                 new ProducerState(12345L, 15, 1300, 1599509565L,
                     OptionalInt.of(20), OptionalLong.of(990)),
                 new ProducerState(98765L, 30, 2300, 1599509599L,
@@ -169,7 +163,7 @@ public class TransactionsCommandTest {
 
 
         Mockito.when(describeResult.partitionResult(topicPartition)).thenReturn(describeFuture);
-        Mockito.when(admin.describeProducers(singleton(topicPartition), expectedOptions)).thenReturn(describeResult);
+        Mockito.when(admin.describeProducers(Set.of(topicPartition), expectedOptions)).thenReturn(describeResult);
 
         execute(args);
         assertNormalExit();
@@ -181,8 +175,8 @@ public class TransactionsCommandTest {
         assertEquals(expectedHeaders, table.get(0));
 
         Set<List<String>> expectedRows = Set.of(
-            asList("12345", "15", "20", "1300", "1599509565", "990"),
-            asList("98765", "30", "-1", "2300", "1599509599", "None")
+            List.of("12345", "15", "20", "1300", "1599509565", "990"),
+            List.of("98765", "30", "-1", "2300", "1599509599", "None")
         );
         assertEquals(expectedRows, new HashSet<>(table.subList(1, table.size())));
     }
@@ -207,11 +201,11 @@ public class TransactionsCommandTest {
         }
 
         Map<Integer, Collection<TransactionListing>> transactions = new HashMap<>();
-        transactions.put(0, asList(
+        transactions.put(0, List.of(
             new TransactionListing("foo", 12345L, TransactionState.ONGOING),
             new TransactionListing("bar", 98765L, TransactionState.PREPARE_ABORT)
         ));
-        transactions.put(1, singletonList(
+        transactions.put(1, List.of(
             new TransactionListing("baz", 13579L, TransactionState.COMPLETE_COMMIT)
         ));
 
@@ -232,11 +226,40 @@ public class TransactionsCommandTest {
         assertEquals(expectedHeaders, table.get(0));
 
         Set<List<String>> expectedRows = Set.of(
-            asList("foo", "0", "12345", "Ongoing"),
-            asList("bar", "0", "98765", "PrepareAbort"),
-            asList("baz", "1", "13579", "CompleteCommit")
+            List.of("foo", "0", "12345", "Ongoing"),
+            List.of("bar", "0", "98765", "PrepareAbort"),
+            List.of("baz", "1", "13579", "CompleteCommit")
         );
         assertEquals(expectedRows, new HashSet<>(table.subList(1, table.size())));
+    }
+
+    @Test
+    public void testForceTerminateTransaction() throws Exception {
+        String transactionalId = "foo";
+        String[] args = new String[] {
+            "--bootstrap-server",
+            "localhost:9092",
+            "forceTerminateTransaction",
+            "--transactionalId",
+            transactionalId
+        };
+
+        TerminateTransactionResult terminateTransactionResult = Mockito.mock(TerminateTransactionResult.class);
+        KafkaFuture<Void> future = KafkaFuture.completedFuture(null);
+        Mockito.when(terminateTransactionResult.result()).thenReturn(future);
+        Mockito.when(admin.forceTerminateTransaction(transactionalId)).thenReturn(terminateTransactionResult);
+
+        execute(args);
+        assertNormalExit();
+    }
+
+    @Test
+    public void testForceTerminateTransactionTransactionalIdRequired() throws Exception {
+        assertCommandFailure(new String[]{
+            "--bootstrap-server",
+            "localhost:9092",
+            "forceTerminateTransaction"
+        });
     }
 
     @Test
@@ -272,11 +295,11 @@ public class TransactionsCommandTest {
                 15,
                 10000,
                 OptionalLong.of(transactionStartTime),
-                singleton(new TopicPartition("bar", 0))
+                Set.of(new TopicPartition("bar", 0))
         ));
 
         Mockito.when(describeResult.description(transactionalId)).thenReturn(describeFuture);
-        Mockito.when(admin.describeTransactions(singleton(transactionalId))).thenReturn(describeResult);
+        Mockito.when(admin.describeTransactions(Set.of(transactionalId))).thenReturn(describeResult);
 
         // Add a little time so that we can see a positive transaction duration in the output
         time.sleep(5000);
@@ -290,7 +313,7 @@ public class TransactionsCommandTest {
         List<String> expectedHeaders = TransactionsCommand.DescribeTransactionsCommand.HEADERS;
         assertEquals(expectedHeaders, table.get(0));
 
-        List<String> expectedRow = asList(
+        List<String> expectedRow = List.of(
             String.valueOf(coordinatorId),
             transactionalId,
             "12345",
@@ -302,6 +325,42 @@ public class TransactionsCommandTest {
             "bar-0"
         );
         assertEquals(expectedRow, table.get(1));
+    }
+
+    @Test
+    public void testListTransactionsWithTransactionalIdPattern() throws Exception {
+        String[] args = new String[] {
+            "--bootstrap-server",
+            "localhost:9092",
+            "list",
+            "--transactional-id-pattern",
+            "ba.*"
+        };
+
+        Map<Integer, Collection<TransactionListing>> transactions = new HashMap<>();
+        transactions.put(0, List.of(
+            new TransactionListing("bar", 98765L, TransactionState.PREPARE_ABORT)
+        ));
+        transactions.put(1, List.of(
+            new TransactionListing("baz", 13579L, TransactionState.COMPLETE_COMMIT)
+        ));
+
+        expectListTransactions(new ListTransactionsOptions().filterOnTransactionalIdPattern("ba.*"), transactions);
+
+        execute(args);
+        assertNormalExit();
+
+        List<List<String>> table = readOutputAsTable();
+        assertEquals(3, table.size());
+
+        // Assert expected headers
+        List<String> expectedHeaders = TransactionsCommand.ListTransactionsCommand.HEADERS;
+        assertEquals(expectedHeaders, table.get(0));
+        Set<List<String>> expectedRows = Set.of(
+            List.of("bar", "0", "98765", "PrepareAbort"),
+            List.of("baz", "1", "13579", "CompleteCommit")
+        );
+        assertEquals(expectedRows, new HashSet<>(table.subList(1, table.size())));
     }
 
     @Test
@@ -397,7 +456,7 @@ public class TransactionsCommandTest {
 
         DescribeProducersResult describeResult = Mockito.mock(DescribeProducersResult.class);
         KafkaFuture<PartitionProducerState> describeFuture = completedFuture(
-            new PartitionProducerState(singletonList(
+            new PartitionProducerState(List.of(
                 new ProducerState(producerId, producerEpoch, 1300, 1599509565L,
                     OptionalInt.of(coordinatorEpoch), OptionalLong.of(startOffset))
             )));
@@ -408,7 +467,7 @@ public class TransactionsCommandTest {
             topicPartition, producerId, producerEpoch, coordinatorEpoch);
 
         Mockito.when(describeResult.partitionResult(topicPartition)).thenReturn(describeFuture);
-        Mockito.when(admin.describeProducers(singleton(topicPartition))).thenReturn(describeResult);
+        Mockito.when(admin.describeProducers(Set.of(topicPartition))).thenReturn(describeResult);
 
         Mockito.when(abortTransactionResult.all()).thenReturn(abortFuture);
         Mockito.when(admin.abortTransaction(expectedAbortSpec)).thenReturn(abortTransactionResult);
@@ -504,7 +563,7 @@ public class TransactionsCommandTest {
         OptionalInt coordinatorEpoch,
         OptionalLong txnStartOffset
     ) {
-        PartitionProducerState partitionProducerState = new PartitionProducerState(singletonList(
+        PartitionProducerState partitionProducerState = new PartitionProducerState(List.of(
             new ProducerState(
                 producerId,
                 producerEpoch,
@@ -517,11 +576,11 @@ public class TransactionsCommandTest {
 
         DescribeProducersResult result = Mockito.mock(DescribeProducersResult.class);
         Mockito.when(result.all()).thenReturn(
-            completedFuture(singletonMap(topicPartition, partitionProducerState))
+            completedFuture(Map.of(topicPartition, partitionProducerState))
         );
 
         Mockito.when(admin.describeProducers(
-            Collections.singletonList(topicPartition),
+            List.of(topicPartition),
             new DescribeProducersOptions()
         )).thenReturn(result);
     }
@@ -530,10 +589,10 @@ public class TransactionsCommandTest {
         Map<String, TransactionDescription> descriptions
     ) {
         DescribeTransactionsResult result = Mockito.mock(DescribeTransactionsResult.class);
-        descriptions.forEach((transactionalId, description) -> {
+        descriptions.forEach((transactionalId, description) ->
             Mockito.when(result.description(transactionalId))
-                .thenReturn(completedFuture(description));
-        });
+                .thenReturn(completedFuture(description))
+        );
         Mockito.when(result.all()).thenReturn(completedFuture(descriptions));
         Mockito.when(admin.describeTransactions(descriptions.keySet())).thenReturn(result);
     }
@@ -568,7 +627,7 @@ public class TransactionsCommandTest {
         };
 
         String topic = "foo";
-        expectListTopics(singleton(topic));
+        expectListTopics(Set.of(topic));
 
         Node node0 = new Node(0, "localhost", 9092);
         Node node1 = new Node(1, "localhost", 9093);
@@ -577,28 +636,28 @@ public class TransactionsCommandTest {
         TopicPartitionInfo partition0 = new TopicPartitionInfo(
             0,
             node0,
-            Arrays.asList(node0, node1),
-            Arrays.asList(node0, node1)
+            List.of(node0, node1),
+            List.of(node0, node1)
         );
         TopicPartitionInfo partition1 = new TopicPartitionInfo(
             1,
             node1,
-            Arrays.asList(node1, node5),
-            Arrays.asList(node1, node5)
+            List.of(node1, node5),
+            List.of(node1, node5)
         );
 
         TopicDescription description = new TopicDescription(
             topic,
             false,
-            Arrays.asList(partition0, partition1)
+            List.of(partition0, partition1)
         );
-        expectDescribeTopics(singletonMap(topic, description));
+        expectDescribeTopics(Map.of(topic, description));
 
         DescribeProducersResult result = Mockito.mock(DescribeProducersResult.class);
-        Mockito.when(result.all()).thenReturn(completedFuture(emptyMap()));
+        Mockito.when(result.all()).thenReturn(completedFuture(Map.of()));
 
         Mockito.when(admin.describeProducers(
-            Collections.singletonList(new TopicPartition(topic, 1)),
+            List.of(new TopicPartition(topic, 1)),
             new DescribeProducersOptions().brokerId(brokerId)
         )).thenReturn(result);
 
@@ -629,28 +688,28 @@ public class TransactionsCommandTest {
         TopicPartitionInfo partition0 = new TopicPartitionInfo(
             0,
             node0,
-            Arrays.asList(node0, node1),
-            Arrays.asList(node0, node1)
+            List.of(node0, node1),
+            List.of(node0, node1)
         );
         TopicPartitionInfo partition1 = new TopicPartitionInfo(
             1,
             node1,
-            Arrays.asList(node1, node5),
-            Arrays.asList(node1, node5)
+            List.of(node1, node5),
+            List.of(node1, node5)
         );
 
         TopicDescription description = new TopicDescription(
             topic,
             false,
-            Arrays.asList(partition0, partition1)
+            List.of(partition0, partition1)
         );
-        expectDescribeTopics(singletonMap(topic, description));
+        expectDescribeTopics(Map.of(topic, description));
 
         DescribeProducersResult result = Mockito.mock(DescribeProducersResult.class);
-        Mockito.when(result.all()).thenReturn(completedFuture(emptyMap()));
+        Mockito.when(result.all()).thenReturn(completedFuture(Map.of()));
 
         Mockito.when(admin.describeProducers(
-            Collections.singletonList(new TopicPartition(topic, 1)),
+            List.of(new TopicPartition(topic, 1)),
             new DescribeProducersOptions().brokerId(brokerId)
         )).thenReturn(result);
 
@@ -678,28 +737,28 @@ public class TransactionsCommandTest {
         TopicPartitionInfo partition0 = new TopicPartitionInfo(
             0,
             node0,
-            Arrays.asList(node0, node1),
-            Arrays.asList(node0, node1)
+            List.of(node0, node1),
+            List.of(node0, node1)
         );
         TopicPartitionInfo partition1 = new TopicPartitionInfo(
             1,
             node1,
-            Arrays.asList(node1, node5),
-            Arrays.asList(node1, node5)
+            List.of(node1, node5),
+            List.of(node1, node5)
         );
 
         TopicDescription description = new TopicDescription(
             topic,
             false,
-            Arrays.asList(partition0, partition1)
+            List.of(partition0, partition1)
         );
-        expectDescribeTopics(singletonMap(topic, description));
+        expectDescribeTopics(Map.of(topic, description));
 
         DescribeProducersResult result = Mockito.mock(DescribeProducersResult.class);
-        Mockito.when(result.all()).thenReturn(completedFuture(emptyMap()));
+        Mockito.when(result.all()).thenReturn(completedFuture(Map.of()));
 
         Mockito.when(admin.describeProducers(
-            Arrays.asList(new TopicPartition(topic, 0), new TopicPartition(topic, 1)),
+            List.of(new TopicPartition(topic, 0), new TopicPartition(topic, 1)),
             new DescribeProducersOptions()
         )).thenReturn(result);
 
@@ -785,11 +844,11 @@ public class TransactionsCommandTest {
         );
 
         expectListTransactions(
-            new ListTransactionsOptions().filterProducerIds(singleton(producerId)),
-            singletonMap(1, Collections.emptyList())
+            new ListTransactionsOptions().filterProducerIds(Set.of(producerId)),
+            Map.of(1, List.of())
         );
 
-        expectDescribeTransactions(Collections.emptyMap());
+        expectDescribeTransactions(Map.of());
 
         execute(args);
         assertNormalExit();
@@ -841,14 +900,14 @@ public class TransactionsCommandTest {
         );
 
         expectListTransactions(
-            new ListTransactionsOptions().filterProducerIds(singleton(producerId)),
-            singletonMap(1, Collections.singletonList(listing))
+            new ListTransactionsOptions().filterProducerIds(Set.of(producerId)),
+            Map.of(1, List.of(listing))
         );
 
         DescribeTransactionsResult result = Mockito.mock(DescribeTransactionsResult.class);
         Mockito.when(result.description(transactionalId))
             .thenReturn(failedFuture(new TransactionalIdNotFoundException(transactionalId + " not found")));
-        Mockito.when(admin.describeTransactions(singleton(transactionalId))).thenReturn(result);
+        Mockito.when(admin.describeTransactions(Set.of(transactionalId))).thenReturn(result);
 
         execute(args);
         assertNormalExit();
@@ -906,8 +965,8 @@ public class TransactionsCommandTest {
         );
 
         expectListTransactions(
-            new ListTransactionsOptions().filterProducerIds(singleton(producerId)),
-            singletonMap(1, Collections.singletonList(listing))
+            new ListTransactionsOptions().filterProducerIds(Set.of(producerId)),
+            Map.of(1, List.of(listing))
         );
 
         // Although there is a transaction in progress from the same
@@ -920,10 +979,10 @@ public class TransactionsCommandTest {
             producerEpoch,
             60000,
             OptionalLong.of(time.milliseconds()),
-            singleton(new TopicPartition("foo", 10))
+            Set.of(new TopicPartition("foo", 10))
         );
 
-        expectDescribeTransactions(singletonMap(transactionalId, description));
+        expectDescribeTransactions(Map.of(transactionalId, description));
 
         execute(args);
         assertNormalExit();
@@ -954,7 +1013,7 @@ public class TransactionsCommandTest {
 
         long durationMinutes = TimeUnit.MILLISECONDS.toMinutes(time.milliseconds() - lastTimestamp);
 
-        List<String> expectedRow = asList(
+        List<String> expectedRow = List.of(
             topicPartition.topic(),
             String.valueOf(topicPartition.partition()),
             String.valueOf(producerId),
@@ -1004,8 +1063,8 @@ public class TransactionsCommandTest {
         );
 
         expectListTransactions(
-            new ListTransactionsOptions().filterProducerIds(singleton(producerId)),
-            singletonMap(1, Collections.singletonList(listing))
+            new ListTransactionsOptions().filterProducerIds(Set.of(producerId)),
+            Map.of(1, List.of(listing))
         );
 
         // The coordinator shows an active transaction with the same epoch
@@ -1018,10 +1077,10 @@ public class TransactionsCommandTest {
             producerEpoch,
             60000,
             OptionalLong.of(lastTimestamp),
-            singleton(topicPartition)
+            Set.of(topicPartition)
         );
 
-        expectDescribeTransactions(singletonMap(transactionalId, description));
+        expectDescribeTransactions(Map.of(transactionalId, description));
 
         execute(args);
         assertNormalExit();
@@ -1052,7 +1111,7 @@ public class TransactionsCommandTest {
         if (line == null) {
             return null;
         } else {
-            return asList(line.split("\\s+"));
+            return List.of(line.split("\\s+"));
         }
     }
 
@@ -1066,5 +1125,4 @@ public class TransactionsCommandTest {
         assertTrue(exitProcedure.hasExited());
         assertEquals(1, exitProcedure.statusCode());
     }
-
 }
